# silab5430_i2c_interface

./: 001_delta.txt  002_delta.txt  441_delta.c  441_delta.h  48_delta.c  48_delta.h  CMakeLists.txt  README.md  delta2header.py  makefile  synth.c  synth.h  synth_config.c  synth_config.h  synth_demo.c  synth_demo_read.c
i2c/: i2c.c  i2c.h
